implement rest of the server
