# code/systems-api/handlers/systems.handlers.go
@@ -20,7 +20,7 @@ type ISystemsHandlers interface {
 	DeleteSystemByCode() echo.HandlerFunc
 	GetSystemByCode() echo.HandlerFunc
 	GetSystemsByNameOrCode() echo.HandlerFunc
-	GetSystemMaintenances() echo.HandlerFunc
+	GetSystemMaintenance() echo.HandlerFunc
 	DeleteConfigurationByKeyAndSystemCode() echo.HandlerFunc
 	GetSystemConfigurationBySystemCode() echo.HandlerFunc
 	GetSystemTimeValueLogs() echo.HandlerFunc
@@ -33,7 +33,12 @@ func NewSystemsHandlers(systemsSvc services.ISystemsService) ISystemsHandlers {
 
 func (h *SystemsHandlers) CreateNewSystem() echo.HandlerFunc {
 	return func(c echo.Context) error {
-		result, err := h.systemsService.CreateNewSystem(models.System{Name: "test", Code: "test"})
+		var system models.System
+		err := c.Bind(&system)
+		if err != nil {
+			return c.JSON(401, "Invalid system data")
+		}
+		result, err := h.systemsService.CreateNewSystem(system)
 		if err != nil {
 			log.Error(err.Error())
 			return c.JSON(500, "General server error")
@@ -44,14 +49,24 @@ func (h *SystemsHandlers) CreateNewSystem() echo.HandlerFunc {
 
 func (h *SystemsHandlers) DeleteSystemByCode() echo.HandlerFunc {
 	return func(c echo.Context) error {
-		result := models.ResponseMessage{Message: "ok"}
+		systemCode := c.Param("systemCode")
+		result, err := h.systemsService.DeleteSystemByCode(systemCode)
+		if err != nil {
+			log.Error(err.Error())
+			return c.JSON(500, "General server error")
+		}
 		return c.JSON(http.StatusOK, result)
 	}
 }
 
 func (h *SystemsHandlers) GetSystemByCode() echo.HandlerFunc {
 	return func(c echo.Context) error {
-		result := models.ResponseMessage{Message: "ok"}
+		systemCode := c.Param("systemCode")
+		result, err := h.systemsService.GetSystemByCode(systemCode)
+		if err != nil {
+			log.Error(err.Error())
+			return c.JSON(401, "System not found")
+		}
 		return c.JSON(http.StatusOK, result)
 	}
 }
@@ -62,6 +77,8 @@ func (h *SystemsHandlers) GetSystemsByNameOrCode() echo.HandlerFunc {
 		var limit int32
 		if limit_param, err := strconv.ParseInt(c.QueryParam("limit"), 10, 64); err == nil {
 			limit = int32(limit_param)
+		} else {
+			return c.JSON(401, "Invalid limit")
 		}
 
 		result, err := h.systemsService.GetSystemsByNameOrCode(searchText, limit)
@@ -74,30 +91,52 @@ func (h *SystemsHandlers) GetSystemsByNameOrCode() echo.HandlerFunc {
 	}
 }
 
-func (h *SystemsHandlers) GetSystemMaintenances() echo.HandlerFunc {
+func (h *SystemsHandlers) GetSystemMaintenance() echo.HandlerFunc {
 	return func(c echo.Context) error {
-		result := models.ResponseMessage{Message: "ok"}
+		systemCode := c.QueryParam("systemCode")
+		result, err := h.systemsService.GetSystemMaintenance(systemCode)
+		if err != nil {
+			log.Error(err.Error())
+			return c.JSON(500, "General server error")
+		}
 		return c.JSON(http.StatusOK, result)
 	}
 }
 
 func (h *SystemsHandlers) DeleteConfigurationByKeyAndSystemCode() echo.HandlerFunc {
 	return func(c echo.Context) error {
-		result := models.ResponseMessage{Message: "ok"}
+		systemCode := c.Param("systemCode")
+		key := c.QueryParam("key")
+		result, err := h.systemsService.DeleteConfigurationByKeyAndSystemCode(systemCode, key)
+		if err != nil {
+			log.Error(err.Error())
+			return c.JSON(500, "General server error")
+		}
 		return c.JSON(http.StatusOK, result)
 	}
 }
 
 func (h *SystemsHandlers) GetSystemConfigurationBySystemCode() echo.HandlerFunc {
 	return func(c echo.Context) error {
-		result := models.ResponseMessage{Message: "ok"}
+		systemCode := c.Param("systemCode")
+		result, err := h.systemsService.GetSystemConfigurationBySystemCode(systemCode)
+		if err != nil {
+			log.Error(err.Error())
+			return c.JSON(500, "General server error")
+		}
 		return c.JSON(http.StatusOK, result)
 	}
 }
 
 func (h *SystemsHandlers) GetSystemTimeValueLogs() echo.HandlerFunc {
 	return func(c echo.Context) error {
-		result := models.ResponseMessage{Message: "ok"}
+		systemCode := c.Param("systemCode")
+
+		result, err := h.systemsService.GetSystemTimeValueLogs(systemCode)
+		if err != nil {
+			log.Error(err.Error())
+			return c.JSON(500, "General server error")
+		}
 		return c.JSON(http.StatusOK, result)
 	}
 }
